--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -123,9 +123,17 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVEPLUS
           Use the CPUFreq governor 'interactiveplus' as default. This allows
           you to get a full dynamic cpu frequency capable system by simply
           loading your cpufreq low-level hardware driver, using the
-          'adapative' governor for latency-sensitive workloads. If unsure
+          'adaptive' governor for latency-sensitive workloads. If unsure
           have a look at the help section of the driver. Fallback governor
 	  will be the performance governor.
+	  
+config CPU_FREQ_DEFAULT_GOV_HOTPLUGX
+        bool "hotplugx"
+        select CPU_FREQ_GOV_HOTPLUGX
+        select CPU_FREQ_GOV_INTERACTIVEPLUS
+        help
+          Use the CPUFreq governor 'hotplugx' as default.
+	  Fallback governor will be the interactive plus governor.
 
 endchoice
 
@@ -219,7 +227,13 @@ config CPU_FREQ_GOV_INTERACTIVEPLUS
           For details, take a look at linux/Documentation/cpu-freq.
 	  If in doubt, say N.
 	
-
+config CPU_FREQ_GOV_HOTPLUGX
+        tristate "'hotplugx' cpufreq policy governor"
+	select CPU_FREQ_TABLE
+	select CPU_FREQ_GOV_COMMON
+        help
+          'hotplugx' - Multi-core hotplug with reduced power usage when screen is off
+	  
 config CPU_FREQ_GOV_CONSERVATIVE
 	tristate "'conservative' cpufreq governor"
 	depends on CPU_FREQ
