Nuked hotplugx, added pesasuq & wheatley

--- a/arch/arm64/configs/l5460_defconfig
+++ b/arch/arm64/configs/l5460_defconfig
@@ -1,7 +1,14 @@
+#Extra stuff
+CONFIG_RD_LZMA=y
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_JUMP_LABEL=y
 CONFIG_MTK_PUMP_EXPRESS_SUPPORT=y
 CONFIG_MTK_PUMP_EXPRESS_PLUS_SUPPORT=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEPLUS=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVEPLUS=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+
 
 CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 # CONFIG_LOCALVERSION_AUTO is not set
